# PersonnelApi_Logs_Documentation/src/controllers/auth.controller.js
@@ -74,6 +74,16 @@ module.exports = {
 
     logout: async (req, res) => {
 
+        
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout from the system.'
+            #swagger.description = 'Delete token and logout user.' 
+            
+                        
+                    */
+
+        
         // Token Delete:
         // if (req.user) {
         //    const data = await Token.deleteOne({ userId: req.user._id })
